# neurosity-sdk-python

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile.dev  devcontainer.json  postStartCommand.sh
examples/: brain_terminal.py  example.py
neurosity/: __init__.py  config.py  example.py  neurosity.py
