[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neurosity"
version = "2.0.0"
authors = [
  { name="Alex Castillo", email="alex@castillo.io" },
]
description = "Official Neurosity Python SDK [BETA]"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/neurosity/neurosity-python-sdk"
"Bug Tracker" = "https://github.com/neurosity/neurosity-python-sdk/issues"
